Responsibe with mobile

--- a/index.html
+++ b/index.html
@@ -36,27 +36,39 @@
   </head>
   <body>
 
-<section id="navbar">
-    <div id="navbar-unique" class="container-fluid justify-content-around">
-        <div class="row">
-            <div class="col">
-                <h2>Biharwishma.in</h2>
-            </div>
-            <div class="col">
-                <a class="btn btn-group-sm btn-light" href="#">Registeration</a>
-                <a id="members" class="btn btn-group-sm btn-info" href="Public/page/members.html">Members</a>
-            </div>
-        </div>
-    </div>
-</section>    
 
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Biharwishma.in</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse justify-content-end navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Registeration</a>
+            </li>
+            <li class="nav-item">
+              <a id="members" class="btn btn-group-sm btn-outline-dark" href="Public/Member/members.html">Members</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    
 
 
 <main class="container">
 
 
-
-  <div class="tagline-section row text-white rounded bg-dark">
+  
+  <div class="tagline-section row text-white rounded bg-dark mb-4">
     <div class="tagline col-lg-6">
         <h1 class="display-4">बिहार विश्वकर्मा महासभा</h1>
         <p class="lead my-3">समाज के विभिन्न क्षेत्रों जैसे राजनैतिक, आर्थिक, सामाजिक, शैक्षणिक एवं आध्यात्मिक रूप से विकास करने में अपना सहयोग करना है।</p>
